--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +26,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App h1 {
+  font-size: 20px;
+  font-weight: normal;
 }
 
 @keyframes App-logo-spin {
